調整後端頁面顯示 completed 的值

--- a/views/index.pug
+++ b/views/index.pug
@@ -33,6 +33,6 @@ block content
             each task in user.Tasks
               li
                 strong
-                  = task.title
+                  = task.title + " completed:" + task.completed
                 | &nbsp;
                 a(href="/users/" + user.id + "/tasks/" + task.id + "/destroy",  class="btn btn-xs btn-warning") delete
